<resources>
    <string name="app_name">Amar Doctor</string>
    <string name="Drawer_Open" translatable="false">Open Drawer</string>
    <string name="Drawer_Close" translatable="false">Close Drawer</string>
    <string name="profile">Profile</string>
    <string name="health">Health Tips</string>
    <string name="shareapps">Share App</string>
    <string name="aboutus">About Us</string>
    <string name="logouttxt">Logout</string>
    <string name="rateus">Rate Us</string>
    <string name="language">Language</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string-array name="division_array">
        <item>Dhaka Division</item>
        <item>Chattogram Division</item>
        <item>Rajsahi Division</item>
        <item>Rangpur Division</item>
        <item>Khulna Division</item>
        <item>Sylhet Division</item>
        <item>Barishal Division</item>
        <item>Mymensingh Division</item>
        <item>Other</item>
    </string-array>
    <string-array name="division_data">
        <item>Dhaka Division</item>
        <item>Chattogram Division</item>
        <item>Rajsahi Division</item>
        <item>Rangpur Division</item>
        <item>Khulna Division</item>
        <item>Sylhet Division</item>
        <item>Barishal Division</item>
        <item>Mymensingh Division</item>
    </string-array>
    <string-array name="countryList">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cabo Verde</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo (Congo-Brazzaville)</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czechia (Czech Republic)</item>
        <item>Democratic Republic of the Congo</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Eswatini (fmr. "Swaziland")</item>
        <item>Ethiopia</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Holy See</item>
        <item>Honduras</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar (formerly Burma)</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>North Korea</item>
        <item>North Macedonia</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestine State</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States of America</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
    <string name="title">Urgent Blood Need*</string>
    <string name="bloodType">Select Blood Group*</string>
    <string name="date">Blood Donation Date*</string>
    <string name="quantity">Blood Quantity*</string>
    <string name="hospitalname">Hospital Name &amp; Address*</string>
    <string name="division">Select your Division*</string>
    <string name="divisionManuall">Enter Division Manually*</string>
    <string name="referance">Referance Name</string>
    <string name="contactnumber">Contact Number*</string>
    <string name="postBtn">Post Now</string>
    <string name="cancelBtn">Cancel</string>
    <string-array name="bloodGroup">

        <item>O Positive</item>
        <item>O Negative</item>
        <item>A Positive</item>
        <item>A Negative</item>
        <item>B Positive</item>
        <item>B Negative</item>
        <item>AB Positive</item>
        <item>AB Negative</item>

    </string-array>
    <string-array name="orgmanuallist">
        <item>Other</item>
    </string-array>
    <string name="lifesavetext">Life Save</string>
    <string name="bloodtypetxt">Blood Type</string>
    <string name="donationstatustxt">D.Status</string>
    <string name="donatenowtxt">Donate Now</string>
    <string name="blooddonerorganizaitiontxt">Blood Organization</string>
    <string name="bloodbanktxt">Find Blood Bank</string>
    <string name="finddonarstxt">Find Donors</string>
    <string name="postforbloodtxt">Post for Blood</string>
    <string name="addyourorg">Select Your Blood Organization</string>
    <string name="addyourmanualorg">Select Your Blood Organization Manually</string>
    <string name="addyourorgtitle">Blood Organization (Optional):</string>
    <string name="checkbox_singintext">I have read and agree to the Terms &amp; Conditions</string>
    <string name="form_title">Personal Details</string>
    <string name="name">Full Name <b>*</b></string>
    <string name="gender">Gender <b>*</b></string>
    <string name="dob">Date of Birth <b>*</b></string>
    <string name="male">Male</string>
    <string name="Female">Female</string>
    <string name="bloodtype">Bloode Type <b>*</b></string>
    <string name="marritial_status">Marital Status <b>*</b></string>
    <string name="address">Address (Optional)</string>
    <string name="identification_type">Identification Type <b>*</b></string>
    <string name="nid">National ID</string>
    <string name="passport">Passport</string>
    <string name="nationality">Nationality <b>*</b></string>
    <string name="nationality_txt">Select your Country <b>*</b></string>
    <string name="mobile">Mobile <b>*</b></string>
    <string name="district">District <b>*</b></string>
    <string name="firsttimedonate">First time Donate? <b>*</b></string>
    <string name="firsttimedonate_yes">Yes</string>
    <string name="firsttimedonate_no">No</string>
    <string name="lastdonationdate">Last Donate Date <b>*</b></string>
    <string name="o_positive">O positive</string>
    <string name="o_negative">O negative</string>
    <string name="a_positive">A positive</string>
    <string name="a_negative">A negative</string>
    <string name="b_positive">B positive</string>
    <string name="b_negative">B negative</string>
    <string name="ab_positive">AB positive</string>
    <string name="ab_negative">AB negative</string>
    <string name="unknow">Unknown</string>
    <string name="dummy_text" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mollis auctor sem vel luctus. Duis pulvinar leo at mauris sollicitudin, eu tempor dui mollis. Donec ut enim et purus pulvinar molestie. Phasellus ultrices sapien et quam sollicitudin, eget rutrum odio rutrum. Integer finibus, nisi at tempor commodo, turpis nunc pulvinar lacus, quis aliquet ligula risus eu urna. Morbi hendrerit semper auctor. Donec quis est eget mauris maximus placerat. Aenean ut purus ac libero elementum molestie sit amet a leo. Etiam consectetur tempor urna a facilisis. Vivamus vitae turpis sit amet est efficitur fermentum quis a velit. Donec condimentum ante ut felis vulputate viverra nec at nunc. Nullam suscipit vulputate mauris sed vulputate. Morbi eu elementum tellus. Ut sit amet lectus efficitur, semper quam scelerisque, tempus ipsum. Nulla auctor tortor metus, sit amet semper ex laoreet nec. Integer gravida justo tellus, eu volutpat velit semper ut.</string>
</resources>