<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.BloodNeed_Post">

    <LinearLayout
        android:id="@+id/locationtopLayout"
        style="@style/CustomCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/blood_splashbg"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight=".5"
            android:src="@drawable/baseline_arrow_back" />

        <LinearLayout
            android:id="@+id/locationLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_weight="2.5"
            android:gravity="right"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/location_background"
                android:elevation="20sp"
                android:gravity="center"
                android:padding="8dp"
                android:text="Loading location..."
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/current_location" />
        </LinearLayout>


    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationtopLayout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <!-- Blood Donation Post Fields -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <!-- Blood Urgent Need -->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/title"
                        android:textColorHint="@color/simple_grey"
                        app:boxStrokeColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/bloodNeedTextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/bloodType"
                        android:textColorHint="@color/simple_grey"
                        app:boxStrokeColor="@color/black">


                        <AutoCompleteTextView
                            android:id="@+id/selectbloodType"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            >


                        </AutoCompleteTextView>


                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/date"
                        android:textColorHint="@color/simple_grey"
                        app:boxStrokeColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/dateTextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:inputType="date"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Blood Quantity -->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/quantity"
                        android:textColorHint="@color/simple_grey"
                        app:boxStrokeColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/bloodqtyId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Hospital Name & Address -->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/hospitalname"
                        android:textColorHint="@color/simple_grey"
                        app:boxStrokeColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/hospitalNameId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/division"
                        android:textColorHint="@color/simple_grey"
                        app:boxStrokeColor="@color/black">


                        <AutoCompleteTextView
                            android:id="@+id/selectdivision"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:textColor="@color/black"></AutoCompleteTextView>


                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Add below the existing TextInputLayout for division selection -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/manualDivisionTextInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/divisionManuall"
                        android:textColorHint="@color/simple_grey"
                        android:visibility="gone"
                        app:boxStrokeColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/manualDivisionEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <!-- Reference Name -->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/referance"
                        android:textColorHint="@color/simple_grey"
                        app:boxStrokeColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/referenceNameId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Contact Number -->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/contactnumber"
                        android:textColorHint="@color/simple_grey"
                        app:boxStrokeColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/contactId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLength="11"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone" />


                    <!-- Buttons -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/cancelButton"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/cancelBtn" />

                        <Button
                            android:id="@+id/postNowButton"
                            style="@style/Widget.MaterialComponents.Button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/postBtn"
                            android:textColor="@color/white" />
                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>